[package]
name = "goodbye_kt"
version = "0.1.0"
authors = ["Akiacode <catry.me@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/goodbye_kt"
repository = "https://github.com/AkiaCode/GoodbyeKT"
license = "MIT"
description = "Rust library that can be reset if you think it's slow"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }